jvimalprasathdev/src/objects/Prospect_Mortech__c.object
<CustomObject>
    <fields>
        <fullName>Add_Date__c</fullName>
        <description>YYYY-MM-DD HH:MI:SS(Given as GMT)</description>
        <label>Add Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankruptcy__c</fullName>
        <description>Never Declared bankruptcy
No
No/Not in the last 7 years
Yes
N/A
Bankruptcy not discharged at least four years
Bankruptcy discharged at least four years</description>
        <label>Bankruptcy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Address_1__c</fullName>
        <label>CB Current Employer Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Address_2__c</fullName>
        <label>CB Current Employer Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_City__c</fullName>
        <label>CB Current Employer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_End_Date__c</fullName>
        <description>YYYY-MM-DD</description>
        <label>CB Current Employer End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Is_Self_Employed__c</fullName>
        <description>1=Yes
0=No</description>
        <label>CB Current Employer Is Self Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Months_On_Job__c</fullName>
        <label>CB Current Employer Months On Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Name__c</fullName>
        <label>CB Current Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Phone_Extension__c</fullName>
        <label>CB Current Employer Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Phone__c</fullName>
        <label>CB Current Employer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Start_Date__c</fullName>
        <description>YYYY-MM-DD</description>
        <label>CB Current Employer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_State__c</fullName>
        <description>2 Character Abbreviation</description>
        <label>CB Current Employer State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Title__c</fullName>
        <label>CB Current Employer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Years_Of_Experience__c</fullName>
        <label>CB Current Employer Years Of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Years_On_Job__c</fullName>
        <label>CB Current Employer Years On Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Current_Employer_Zip__c</fullName>
        <label>CB Current Employer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Residence_Address_1__c</fullName>
        <label>CB Current Residence Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Residence_Address_2__c</fullName>
        <label>CB Current Residence Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Residence_City__c</fullName>
        <label>CB Current Residence City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Residence_Number_Of_Months__c</fullName>
        <label>CB Current Residence Number Of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Current_Residence_Number_Of_Years__c</fullName>
        <label>CB Current Residence Number Of Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Current_Residence_Own_Or_Rent__c</fullName>
        <label>CB Current Residence Own Or Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Current_Residence_State__c</fullName>
        <label>CB Current Residence State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Current_Residence_Zip__c</fullName>
        <label>CB Current Residence Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Date_Of_Birth__c</fullName>
        <description>YYYY-MM-DD</description>
        <label>CB Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_10__c</fullName>
        <description>1=Yes
0=No</description>
        <label>CB Declaration 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_11__c</fullName>
        <description>1=Yes
0=No</description>
        <label>CB Declaration 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_1__c</fullName>
        <description>1=Yes
0=No</description>
        <label>CB Declaration 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_Base_Income__c</fullName>
        <label>CB Declaration Base Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_Bonuses__c</fullName>
        <label>CB Declaration Bonuses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_Comissions__c</fullName>
        <label>CB Declaration Comissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_Continuing_Debts__c</fullName>
        <label>CB Declaration Continuing Debts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_Installment_Debts__c</fullName>
        <label>CB Declaration Installment Debts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_Net_Rental_Income__c</fullName>
        <label>CB Declaration Net Rental Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Declaration_Overtime__c</fullName>
        <label>CB Declaration Overtime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Email__c</fullName>
        <label>CB Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_First_Name__c</fullName>
        <label>CB First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Home_Phone__c</fullName>
        <label>CB Home Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Last_Name__c</fullName>
        <label>CB Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Middle_Name__c</fullName>
        <label>CB Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Mobile_Phone__c</fullName>
        <label>CB Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Address_1__c</fullName>
        <label>CB Previous Employer Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Address_2__c</fullName>
        <label>CB Previous Employer Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_City__c</fullName>
        <label>CB Previous Employer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_End_Date__c</fullName>
        <description>YYYY-MM-DD</description>
        <label>CB Previous Employer End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Is_Self_Employed__c</fullName>
        <description>1=Yes
0=No</description>
        <label>CB Previous Employer Is Self Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Months_On_Job__c</fullName>
        <label>CB Previous Employer Months On Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Name__c</fullName>
        <label>CB Previous Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Phone_Extension__c</fullName>
        <label>CB Previous Employer Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Phone__c</fullName>
        <label>CB Previous Employer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Start_Date__c</fullName>
        <description>YYYY-MM-DD</description>
        <label>CB Previous Employer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_State__c</fullName>
        <label>CB Previous Employer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Title__c</fullName>
        <label>CB Previous Employer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Years_Of_Experience__c</fullName>
        <label>CB Previous Employer Years Of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Years_On_Job__c</fullName>
        <label>CB Previous Employer Years On Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Employer_Zip__c</fullName>
        <label>CB Previous Employer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Residence_Address_1__c</fullName>
        <label>CB Previous Residence Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Residence_Address_2__c</fullName>
        <label>CB Previous Residence Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Residence_City__c</fullName>
        <label>CB Previous Residence City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Residence_Number_Of_Months__c</fullName>
        <label>CB Previous Residence Number Of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Residence_Number_Of_years__c</fullName>
        <label>CB Previous Residence Number Of years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Residence_Own_Or_Rent__c</fullName>
        <description>0=Own
1=Rent
2=Rent Free</description>
        <label>CB Previous Residence Own Or Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Residence_State__c</fullName>
        <description>2 Character Abbreviation</description>
        <label>CB Previous Residence State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Previous_Residence_Zip__c</fullName>
        <label>CB Previous Residence Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_SSN__c</fullName>
        <label>CB SSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Work_Phone__c</fullName>
        <label>CB Work Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_13_Years__c</fullName>
        <label>Chapter 13 Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chapter_7_Years__c</fullName>
        <label>Chapter 7 Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condo__c</fullName>
        <description>1=Yes
0=No</description>
        <label>Condo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <description>0=Morning
1=Afternoon
2=Evening
4=Do Not Contact</description>
        <label>Contact Preference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <description>N/A(Default)
Excellent
Excellent,Never any issues
Very Good
Good
Good,No recent issues
Fair
Fair,Recent issues or history of issues
Poor</description>
        <label>Credit Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Address_1__c</fullName>
        <label>Current Employer Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Address_2__c</fullName>
        <label>Current Employer Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer_City__c</fullName>
        <label>Current Employer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer_End_Date__c</fullName>
        <description>YYYY-DD-MM</description>
        <label>Current Employer End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Is_Self_Employed__c</fullName>
        <description>1=Yes
0=No</description>
        <label>Current Employer Is Self Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Months_On_Job__c</fullName>
        <label>Current Employer Months On Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Name__c</fullName>
        <label>Current Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Phone_Extension__c</fullName>
        <label>Current Employer Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Phone__c</fullName>
        <label>Current Employer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Start_Date__c</fullName>
        <description>YYYY-MM-DD</description>
        <label>Current Employer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Employer_State__c</fullName>
        <label>Current Employer State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Title__c</fullName>
        <label>Current Employer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Years_Of_Experience__c</fullName>
        <label>Current Employer Years Of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Years_On_Job__c</fullName>
        <label>Current Employer Years On Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Employer_Zip__c</fullName>
        <label>Current Employer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Residence_Address_1__c</fullName>
        <label>Current Residence Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Residence_Address_2__c</fullName>
        <label>Current Residence Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Residence_City__c</fullName>
        <label>Current Residence City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Residence_Number_Of_Months__c</fullName>
        <label>Current Residence Number Of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Residence_Number_Of_Years__c</fullName>
        <label>Current Residence Number Of Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Residence_Own_Or_Rent__c</fullName>
        <description>0=Own
1=Rent
2=Rent Free</description>
        <label>Current Residence Own Or Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Residence_State__c</fullName>
        <description>2 character abbreviation</description>
        <label>Current Residence State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Residence_Zip__c</fullName>
        <label>Current Residence Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Value Generated By Mortech</description>
        <label>Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declaration_10__c</fullName>
        <description>1=Yes
0=No</description>
        <label>Declaration 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_11__c</fullName>
        <description>1=Yes
0=No</description>
        <label>Declaration 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_1__c</fullName>
        <description>1=Yes
0=No</description>
        <label>Declaration 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Base_Income__c</fullName>
        <label>Declaration Base Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Bonuses__c</fullName>
        <label>Declaration Bonuses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Commisions__c</fullName>
        <label>Declaration Commisions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Continuing_Debts__c</fullName>
        <label>Declaration Continuing Debts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Installment_Debts__c</fullName>
        <label>Declaration Installment Debts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Net_Rental_Income__c</fullName>
        <label>Declaration Net Rental Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Overtime__c</fullName>
        <label>Declaration Overtime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fico__c</fullName>
        <label>Fico</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filters__c</fullName>
        <description>Value Generated by mortech</description>
        <label>Filters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Time_Home_Buyer__c</fullName>
        <description>1=Yes
0=No</description>
        <label>First Time Home Buyer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foreclosure_Years__c</fullName>
        <label>Foreclosure Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Found_Home__c</fullName>
        <description>1 = Yes
0 = No</description>
        <label>Found Home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Disposable_Income__c</fullName>
        <label>Gross Disposable Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Value Generated By Mortech</description>
        <label>Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_Type__c</fullName>
        <description>0=N/A
1=Self Employed
2=Wage Earner
3=Both</description>
        <label>Income Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_Verify__c</fullName>
        <description>0=N/A
10=Stated
20=W-2
30=1099
40=6 months bank statements
50=12 months bank statements
60=24 months bank statements
70=tax returns</description>
        <label>Income Verify</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <label>LTV</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_120__c</fullName>
        <label>Late 120</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_30__c</fullName>
        <label>Late 30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_60__c</fullName>
        <label>Late 60</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Email__c</fullName>
        <label>Loan Officer Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Id__c</fullName>
        <description>Value Generated by Mortech</description>
        <label>Loan Officer Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Name__c</fullName>
        <label>Loan Officer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Purpose__c</fullName>
        <description>0 = Purchase (Default)
1 = Rate/Term Refinance
2 = Cash-out Refinance
3 = Home Equity
4 = HELOC</description>
        <label>Loan Purpose</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lock_In_Period__c</fullName>
        <description>Give as number of days</description>
        <label>Lock In Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufactured_Home__c</fullName>
        <label>Manufactured Home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Debt__c</fullName>
        <label>Monthly Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <description>0 = Owner Occupied (Default)
1 = Non-owner Occupied
2 = Second Home</description>
        <label>Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupational_Status__c</fullName>
        <description>Employed
Full Time
Homemaker
N/A
Not Employed
Part Time
Retired
Self-Employed
Student</description>
        <label>Occupational Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Address_1__c</fullName>
        <label>Previous Employer Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Address_2__c</fullName>
        <label>Previous Employer Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_City__c</fullName>
        <label>Previous Employer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_End_Date__c</fullName>
        <description>YYYY-MM-DD</description>
        <label>Previous Employer End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Is_Self_Employed__c</fullName>
        <description>1=Yes
0=No</description>
        <label>Previous Employer Is Self Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Months_On_Job__c</fullName>
        <label>Previous Employer Months On Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Name__c</fullName>
        <label>Previous Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Phone_Extension__c</fullName>
        <label>Previous Employer Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Phone__c</fullName>
        <label>Previous Employer Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Start_Date__c</fullName>
        <description>YYYY-MM-DD</description>
        <label>Previous Employer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_State__c</fullName>
        <description>2 Characte Abbreviation</description>
        <label>Previous Employer State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Title__c</fullName>
        <label>Previous Employer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Years_Of_Experience__c</fullName>
        <label>Previous Employer Years Of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Years_On_Job__c</fullName>
        <label>Previous Employer Years On Job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Zip__c</fullName>
        <label>Previous Employer Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Residence_Address_1__c</fullName>
        <label>Previous Residence Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Residence_Address_2__c</fullName>
        <label>Previous Residence Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Residence_City__c</fullName>
        <label>Previous Residence City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Residence_Number_Of_Months__c</fullName>
        <label>Previous Residence Number Of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Residence_Number_Of_Years__c</fullName>
        <label>Previous Residence Number Of Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Residence_Own_Or_Rent__c</fullName>
        <description>0=Own
1=Rent
2=Rent Free</description>
        <label>Previous Residence Own Or Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Residence_State__c</fullName>
        <description>2 character abbreviation</description>
        <label>Previous Residence State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Residence_Zip__c</fullName>
        <label>Previous Residence Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_1_APR__c</fullName>
        <label>Product 1 APR</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_1_Id__c</fullName>
        <label>Product 1 Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_1_LT_Product_Name__c</fullName>
        <label>Product 1 LT Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>